--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.23.9",
     "@react-awesome-query-builder/core": "^6.4.2",
     "@types/amqplib": "^0.10.4",
     "amqplib": "^0.10.3",
